// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Board /> renders correctly 1`] = `
<div
  className="Board"
/>
`;

exports[`<Board /> renders with multiple child correctly 1`] = `
<div
  className="Board"
>
  <span>
    Fake
  </span>
  <span>
    Fake
  </span>
  <span>
    Fake
  </span>
</div>
`;

exports[`<Board /> renders with one child correctly 1`] = `
<div
  className="Board"
>
  <span>
    Fake
  </span>
</div>
`;
